--- a/templates/page/contact.html
+++ b/templates/page/contact.html
@@ -11,19 +11,6 @@
     <section class="page-title">
         <div class="auto-container">
 			<h1>Связажитесь с нами</h1>
-			
-			<!-- Search Boxed -->
-			<div class="search-boxed">
-				<div class="search-box">
-					<form method="post" action="contact.html">
-						<div class="form-group">
-							<input type="search" name="search-field" value="" placeholder="Что вы хотите найти?" required>
-							<button type="submit"><span class="icon fa fa-search"></span></button>
-						</div>
-					</form>
-				</div>
-			</div>
-			
         </div>
     </section>
     <!--End Page Title-->
@@ -33,50 +20,6 @@
 		<div class="patern-layer-one paroller" data-paroller-factor="0.40" data-paroller-factor-lg="0.20" data-paroller-type="foreground" data-paroller-direction="vertical" style="background-image: url(images/icons/icon-1.png)"></div>
 		<div class="patern-layer-two paroller" data-paroller-factor="0.40" data-paroller-factor-lg="-0.20" data-paroller-type="foreground" data-paroller-direction="vertical" style="background-image: url(images/icons/icon-2.png)"></div>
 		<div class="auto-container">
-			<div class="inner-container">
-				<!-- Sec Title -->
-				<div class="sec-title centered">
-					<h2>Зполните форму</h2>
-				</div>
-				
-				<!-- Contact Form -->
-				<div class="contact-form">
-				
-					<!-- Profile Form -->
-					<form method="post" action="sendemail.php" id="contact-form">
-						<div class="row clearfix">
-							
-							<div class="col-lg-6 col-md-6 col-sm-12 form-group">
-								<input type="text" name="username" placeholder="Имя*" required="">
-							</div>
-							
-							<div class="col-lg-6 col-md-6 col-sm-12 form-group">
-								<input type="text" name="lastname" placeholder="Фамилия*" required="">
-							</div>
-							
-							<div class="col-lg-6 col-md-6 col-sm-12 form-group">
-								<input type="email" name="email" placeholder="Email*" required="">
-							</div>
-							
-							<div class="col-lg-6 col-md-6 col-sm-12 form-group">
-								<input type="text" name="phone" placeholder="Номер*" required="">
-							</div>
-							
-							<div class="col-lg-12 col-md-12 col-sm-12 form-group">
-								<textarea class="" name="message" placeholder="Ваше сообщение"></textarea>
-							</div>
-							
-							<div class="col-lg-12 col-md-12 col-sm-12 form-group text-right">
-								<button class="theme-btn btn-style-three" type="submit" name="submit-form"><span class="txt">Отправить сообщение <i class="fa fa-angle-right"></i></span></button>
-							</div>
-							
-						</div>
-					</form>
-						
-				</div>
-				
-			</div>
-			
 			<!-- Contact Info Section -->
 			<div class="contact-info-section">
 				<div class="title-box">
@@ -92,8 +35,8 @@
 							<div class="icon fa fa-phone"></div>
 							<strong>Телефон</strong>
 							<ul>
-								<li><a href="tel:+1-123-456-7890">+1 (123) 456-7890</a></li>
-								<li><a href="tel:+1-123-456-7890">+1 (123) 456-7890</a></li>
+								<li><a href="tel:+1-123-456-7890">{{ data.phone }}</a></li>
+								<li><a href="tel:+1-123-456-7890">{{ data.phone2 }}</a></li>
 							</ul>
 						</div>
 					</div>
@@ -104,8 +47,8 @@
 							<div class="icon fa fa-envelope-o"></div>
 							<strong>Email</strong>
 							<ul>
-								<li><a href="mailto:info@yourcompany.com">info@yourcompany.com</a></li>
-								<li><a href="mailto:infobootcamp@gmail.com">infobootcamp@gmail.com</a></li>
+								<li><a href="mailto:info@yourcompany.com">{{ data.email }}</a></li>
+								<li><a href="mailto:infobootcamp@gmail.com">{{ data.email2 }}</a></li>
 							</ul>
 						</div>
 					</div>
@@ -116,7 +59,7 @@
 							<div class="icon fa fa-map-marker"></div>
 							<strong>Адресс</strong>
 							<ul>
-								<li>Portfolio Technology 07, Capetown 12 Road, Chicago, 2436, USA</li>
+								<li>{{ data.address }}</li>
 							</ul>
 						</div>
 					</div>
@@ -135,14 +78,14 @@
 		<div class="map-boxed">
 			<!--Map Outer-->
 			<div class="map-outer">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805184.6331292129!2d144.49266890254142!3d-37.97123689954809!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne%20VIC%2C%20Australia!5e0!3m2!1sen!2s!4v1574408946759!5m2!1sen!2s" allowfullscreen=""></iframe>
+				<iframe src="{{ data.map }}" allowfullscreen=""></iframe>
 			</div>
 		</div>
 	</section>
 	<!-- End Map Section -->
 	
 	<!-- Call To Action Section Two -->
-	<section class="call-to-action-section-two" style="background-image: url(images/background/3.png)">
+	<section class="call-to-action-section-two" style="background-image: url({% static 'images/background/3.png' %})">
 		<div class="auto-container">
 			<div class="content">
 				<h2>Ready to get started?</h2>
@@ -156,124 +99,5 @@
 	</section>
 	<!-- End Call To Action Section Two -->
 	
-	<!--Main Footer-->
-    <footer class="main-footer">
-		<!-- Pattern Layer -->
-		<div class="pattern-layer paroller" data-paroller-factor="0.60" data-paroller-factor-lg="0.20" data-paroller-type="foreground" data-paroller-direction="vertical" style="background-image:url(images/icons/icon-1.png)"></div>
-		<div class="pattern-layer-two data-paroller-factor="0.60" data-paroller-factor-lg="0.20" data-paroller-type="foreground" data-paroller-direction="vertical" style="background-image:url(images/icons/icon-3.png)"></div>
-		<div class="auto-container">
-		
-        	<!-- Widgets Section -->
-            <div class="widgets-section">
-            	<div class="row clearfix">
-                	
-                    <!-- Big Column -->
-                    <div class="big-column col-lg-6 col-md-12 col-sm-12">
-                        <div class="row clearfix">
-							
-							<!--Footer Column-->
-                            <div class="footer-column col-lg-7 col-md-6 col-sm-12">
-                                <div class="footer-widget logo-widget">
-									<div class="logo">
-                                    	<a href="index.html"><img src="images/footer-logo.png" alt="" /></a>
-                                    </div>
-									<div class="text">Replenish him third creature and meat blessed void a fruit gathered you’re, they’re two waters own morning gathered greater.</div>
-									<div class="social-box">
-										<a href="#" class="fa fa-facebook"></a>
-										<a href="#" class="fa fa-instagram"></a>
-										<a href="#" class="fa fa-twitter"></a>
-										<a href="#" class="fa fa-google"></a>
-										<a href="#" class="fa fa-pinterest-p"></a>
-									</div>
-									<div class="copyright">Copyright &copy; 2020 AuburnForest</div>
-								</div>
-							</div>
-							
-							<!--Footer Column-->
-                            <div class="footer-column col-lg-5 col-md-6 col-sm-12">
-                                <div class="footer-widget links-widget">
-									<h4>About Us</h4>
-									<ul class="links-widget">
-										<li><a href="#">Afficiates</a></li>
-										<li><a href="#">Partners</a></li>
-										<li><a href="#">Reviews</a></li>
-										<li><a href="#">Blogs</a></li>
-										<li><a href="#">Newsletter</a></li>
-									</ul>
-								</div>
-							</div>
-							
-						</div>
-					</div>
-					
-					<!-- Big Column -->
-                    <div class="big-column col-lg-6 col-md-12 col-sm-12">
-                        <div class="row clearfix">
-							
-							<!--Footer Column-->
-                            <div class="footer-column col-lg-6 col-md-6 col-sm-12">
-                                <div class="footer-widget links-widget">
-									<h4>Resource</h4>
-									<ul class="links-widget">
-										<li><a href="#">Privacy Policy</a></li>
-										<li><a href="#">Support Area</a></li>
-										<li><a href="#">Documentations</a></li>
-										<li><a href="#">How it works</a></li>
-										<li><a href="#">Terms of Policy</a></li>
-									</ul>
-								</div>
-							</div>
-							
-							<!--Footer Column-->
-                            <div class="footer-column col-lg-6 col-md-6 col-sm-12">
-                                <div class="footer-widget links-widget">
-									<h4>Quick Links</h4>
-									<ul class="links-widget">
-										<li><a href="#">home</a></li>
-										<li><a href="#">About us</a></li>
-										<li><a href="#">Features</a></li>
-										<li><a href="#">Pricing</a></li>
-										<li><a href="#">Contact</a></li>
-									</ul>
-								</div>
-							</div>
-						
-						</div>
-					</div>
-					
-				</div>
-			</div>
-			
-		</div>
-	</footer>
-	
-</div>
-<!--End pagewrapper-->
-
-<!--Scroll to top-->
-<div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-arrow-circle-up"></span></div>
-
-<script src="{% static 'js/jquery.js' %}"></script>
-<script src="{% static 'js/popper.min.js' %}"></script>
-<script src="{% static 'js/jquery.scrollTo.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
-<script src="{% static 'js/jquery.fancybox.js' %}"></script>
-<script src="{% static 'js/appear.js' %}"></script>
-<script src="{% static 'js/swiper.min.js' %}"></script>
-<script src="{% static 'js/element-in-view.js' %}"></script>
-<script src="{% static 'js/jquery.paroller.min.js' %}"></script>
-<script src="{% static 'js/validate.js' %}"></script>
-<script src="{% static 'js/parallax.min.js' %}"></script>
-<script src="{% static 'js/tilt.jquery.min.js' %}"></script>
-<!--Master Slider-->
-<script src="{% static 'js/jquery.easing.min.js' %}"></script>
-<script src="{% static 'js/owl.js' %}"></script>
-<script src="{% static 'js/wow.js' %}"></script>
-<script src="{% static 'js/jquery-ui.js' %}"></script>
-<script src="{% static 'js/script.js' %}"></script>
-
-</body>
-</html>
 
 {% endblock content %}
