add forms.py and add forms in course detail page

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,8 +74,12 @@
                                  <div class="footer-widget links-widget">
  									<a href="{% url "home" %}"><h4>Главная</h4></a>
  								</div>
+
+								 <div class="footer-widget links-widget">
+									<a href="{% url "contact" %}"><h4>Связаться</h4></a>
+								</div>
  							</div>
- 							
+							
  						</div>
  					</div>
  					
@@ -97,23 +101,24 @@
 								</div>
 							</div>
 
+							
 							<!--Footer Column-->
 							<div class="footer-column col-lg-6 col-md-6 col-sm-12">
 								<div class="footer-widget links-widget">
 									<a href="{% url "blog" %}"><h4>Блог</h4></a>
 								</div>
 							</div>
-
- 							<!--Footer Column-->
-                             <div class="footer-column col-lg-6 col-md-6 col-sm-12">
-                                 <div class="footer-widget links-widget">
-									<a href="{% url "contact" %}"><h4>Связаться</h4></a>
- 								</div>
- 							</div>
+							
+							<!--Footer Column-->
+							<div class="footer-column col-lg-6 col-md-6 col-sm-12">
+								<div class="footer-widget links-widget">
+									<a href="{% url "home" %}"><h4>Зарегистрироваться</h4></a>
+								</div>
+							</div>
  						
- 						</div>
- 					</div>
- 					
+						</div>
+					</div>
+					
  				</div>
  			</div>
  			
