--- a/templates/page/book-detail.html
+++ b/templates/page/book-detail.html
@@ -10,9 +10,9 @@
 	<!-- Page Title -->
     <section class="page-title">
         <div class="auto-container">
-			<h1>Детальна информация</h1>
+			<h1>{{ book.title }}</h1>
 			
-			<!-- Search Boxed -->
+			<!-- Search Boxed --> 
 			<div class="search-boxed">
 				<div class="search-box">
 					<form method="post" action="contact.html">
