--- a/templates/page/blog-detail.html
+++ b/templates/page/blog-detail.html
@@ -115,7 +115,7 @@
 								</div>
 								{% endfor %}
 
-								{% for reply in reply_comments %}
+								{% comment %} {% for reply in comments %}
 								<div class="comment-box reply-comment">
 									<div class="comment">
 										<div class="author-thumb"><img src="{{ reply.avatar.url }}" alt=""></div>
@@ -124,7 +124,7 @@
 										<a class="theme-btn reply-btn" href="#">Ответить</a>
 									</div>
 								</div>
-								{% endfor %}
+								{% endfor %} {% endcomment %}
 							
 							</div>
 
@@ -135,21 +135,27 @@
 							<div class="group-title"><h4>Оставьте комментарий</h4></div>
 							
 							<!--Comment Form-->
-							<form method="post" action="blog.html">
-								<div class="row clearfix">
+							<form method="post" action="{% url "submit_review" %}">
+								{% csrf_token %}
+								<div class="row clearfix"> 
 									
 									<div class="col-lg-6 col-md-6 col-sm-12 form-group">
-										<input type="text" name="username" placeholder="ФИО*" required>
+										{{form.name}}
 									</div>
 									
 									<div class="col-lg-6 col-md-6 col-sm-12 form-group">
-										<input type="email" name="email" placeholder="Email*" required>
+										{{form.email}}
 									</div>
 									
 									<div class="col-lg-12 col-md-12 col-sm-12 form-group">
-										<textarea class="" name="message" placeholder="Оставьте комментарий..."></textarea>
+										{{form.desc}}
 									</div>
 									
+									<div class="col-lg-12 col-md-12 col-sm-12 form-group">
+										<label>Рейтинг (от 1 до 5)</label>
+										{{form.rating}}
+									</div>
+
 									<div class="col-lg-12 col-md-12 col-sm-12 form-group">
 										<button class="theme-btn btn-style-three" type="submit" name="submit-form"><span class="txt">Отправить <i class="fa fa-angle-right"></i></span></button>
 									</div>
