--- a/templates/page/books.html
+++ b/templates/page/books.html
@@ -63,23 +63,23 @@
 									<div class="tab active-tab" id="prod-html">
 										<div class="content">
 											<div class="row clearfix">
-												{% for book in book %}
+												{% for bk in book %}
 													<div class="book-block col-lg-3 col-md-4 col-sm-12">
 														<div class="inner-box">
 															<figure class="image-box">
-																<img src="{{ book.img.url }}" alt="">
+																<img src="{{ bk.img.url }}" alt="">
 																<!-- Overlay Box -->
 																<div class="overlay-box">
 																	<div class="overlay-inner">
-																		<div class="content">
-																			<a href="{{ book.get_absolute_url }}" class="link"><img src="{{ book.img.url }}" alt=""></a>
-																			<a href="{{ book.img.url }}" data-fancybox="books" data-caption="" class="link"><span class="icon flaticon-full-screen"></span></a>
+																		<div class="content">			
+																			<a href="{{ bk.get_absolute_url }}" class="link"><span class="icon fa fa-link"></span></a>
+																			<a href="{{ bk.img.url }}" data-fancybox="books" data-caption="" class="link"><span class="icon flaticon-full-screen"></span></a>
 																		</div>
 																	</div>
 																</div>
-															</figure>
+															</figure> 
 															<div class="lower-box">
-																<h6><a href="{{ book.get_absolute_url }}">{{ book.title }}</a></h6>
+																<h6><a href="{{ bk.get_absolute_url }}">{{ bk.title }}</a></h6>
 															</div>
 														</div>
 													</div>
